src/test/deca/syntax/invalid/Objet/BadReturn.deca
// Description:
//      Syntaxically incorrect program
//
// Result:
//      Parsing error line 13
//
// History:
//      Created in 17/1/2022

class A {
    int foo() {
    }
    return 2;
}

{
    A a = new A();
}
